VP 10.3.0 Changelog
------------------------

- add new material option for the glossy color: 'Use Image', which allows to configure how much the (optional) image that is attached
  to a scene element is allowed to influence the glossy part of the material (0=no tinting at all from the image, up to 1=same behavior as before/older VPX versions)

- add new configurable in-game key for a lockbar/fire button (accessible via "LockbarKey" in the script)

- in interactive camera/light editing mode (e.g. launch table with F6 or the respective menu entry):
  - press the start game key (default is 1) to reset the camera and all backdrop settings (inclination, layback...)
  - add camera rotation around Y axis
  - navigating around the table with the arrow keys (and left alt key) is now possible
  - show camera position

- add additional parameter to primitives to allow for rendering backface triangles (if the used material features transparency)

- add simple kicker hole mesh

- change AntiFriction to Damping for the gate and spinner elements (which also changes the input range from 0..100 to 0..1, and is inverse to before, e.g. Damping="1-AntiFriction/100")
  (old tables will still load/save exactly the same though, as it was always used like this internally anyway)

- add (optional) missing hit event to ramps
- add missing Timer properties for ramps

- VP now supports three different view modes (DESKTOP, FULLSCREEN and FULL_SINGLE_SCREEN (to be able to easily add an additional backglass to the table)). The UI was changed to select, view and change these properties via a drop down list
- add more window resolutions to the video preferences (for new FSS/portrait setups)

- using the built-in DMD (via the flasher element) now in addition will respect the 'Additive Blend' and 'Modulate' parameters to steer the blending with the table
  (this can for example be used to simulate a reflection on the playfield glass: set 'Modulate' to 0.9 and check 'Additive Blend' as an example)
