@@ -939,6 +939,7 @@
 #define IDC_LOCKBAR                     803
 #define IDC_LOCKBARBUTTON               804
 #define IDC_JOYLOCKBARCOMBO             805
+#define IDC_FLIPPER_SPEED_FACTOR        806
 #define DISPID_Gate_Height1             1142
 #define DISPID_Image                    1500
 #define DISPID_Image2                   1501
@@ -1091,7 +1092,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        626
 #define _APS_NEXT_COMMAND_VALUE         4020
-#define _APS_NEXT_CONTROL_VALUE         806
+#define _APS_NEXT_CONTROL_VALUE         807
 #define _APS_NEXT_SYMED_VALUE           188
 #endif
 #endif
