@@ -2393,7 +2393,7 @@ BEGIN
 
     IDD_PROPFLIPPER_PHYSICS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 145
+        BOTTOMMARGIN, 171
     END
 
     IDD_PROPPLUNGER_PHYSICS, DIALOG
